Quelques petites modifications du footer et du nav

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,4 +1,5 @@
 <footer>
+
     <section>
         <a class="btn" href="#!" role="button">
             <i class="fab fa-facebook-f"></i>
@@ -14,8 +15,6 @@
         </a>
     </section>
 
-  <div>
-    © 2021 Copyright: Marc Chanteranne
-  </div>
+    <div>© 2021 Copyright: Marc Chanteranne</div>
 
 </footer>
