--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,23 +14,13 @@ nav a{
     color: white !important;
 }
 
-.active{
-    font-weight: bold;
-}
-
-
-/*************** FORM *****************/
-.submit{
-    padding: 10px;
-    background-color: rgb(0, 132, 255);
+nav button{
     color: white !important;
-    border-radius: 10px;
-    border: none;
+    border-color: white !important;
 }
 
-.submit:hover{
-    transition-duration: 0.5s;
-    opacity: 80%;
+nav i{
+    font-size: 25px;
 }
 
 
@@ -59,4 +49,30 @@ footer>section a:hover{
 
 footer>div{
     background-color: rgb(20, 20, 20);
+}
+
+/*************** ACCUEIL ******************/
+
+h1{
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: solid;
+}
+
+h2{
+    font-size: 20px;
+}
+
+/*************** FORM *****************/
+.submit{
+    padding: 10px;
+    background-color: rgb(0, 132, 255);
+    color: white !important;
+    border-radius: 10px;
+    border: none;
+}
+
+.submit:hover{
+    transition-duration: 0.5s;
+    opacity: 80%;
 }
