--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,6 +10,8 @@
 
     <div class="container">
 
+        <h1>Formulaire d'inscription</h1>
+
         {{ form_start(registrationForm) }}
             {{ form_row(registrationForm.name) }}
             {{ form_row(registrationForm.firstName) }}
@@ -17,11 +19,11 @@
             {{ form_row(registrationForm.birthDate) }}
             {{ form_row(registrationForm.login) }}
             {{ form_row(registrationForm.plainPassword, {
-                label: 'Password'
+                label: 'Mot de passe'
             }) }}
             {{ form_row(registrationForm.agreeTerms) }}
 
-            <button type="submit" class="btn">Register</button>
+            <button type="submit" class="btn btn-primary">S'inscrire</button>
         {{ form_end(registrationForm) }}
     </div>
     
