--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -9,10 +9,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link"href="#">Formations</a>
+                    <a class="nav-link"href="{{ path('formation') }}">Formations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Articles</a>
+                    <a class="nav-link" href="{{ path('article') }}">Articles</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
