Modification du footer et du nav

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,16 +1,16 @@
 <footer>
 
     <section>
-        <a class="btn" href="#!" role="button">
+        <a class="btn" href="https://www.facebook.com/marc.chanteranne.9" target="_blank" role="button">
             <i class="fab fa-facebook-f"></i>
         </a>
-        <a class="btn" href="#!" role="button">
+        <a class="btn" href="https://twitter.com/wow_marc" target="_blank" role="button">
             <i class="fab fa-twitter"></i>
         </a>
-        <a class="btn" href="#!" role="button">
+        <a class="btn" href="https://www.linkedin.com/in/marc-chanteranne-052385188/" target="_blank" role="button">
             <i class="fab fa-linkedin-in"></i>
         </a>
-        <a class="btn" href="#!" role="button">
+        <a class="btn" href="https://github.com/Marc-CHANTERANNE" target="_blank" role="button">
             <i class="fab fa-github"></i>
         </a>
     </section>
