--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+body{
+    font-family: 'Open Sans', sans-serif;
+}
+
 .container{
     text-align: center;
     border: 1px grey solid;
@@ -14,7 +18,6 @@ nav{
 
 nav a{
     color: white !important;
-    font-family: 'Open Sans', sans-serif;
     font-weight: bold;
 }
 
@@ -32,6 +35,20 @@ nav button{
     opacity: 60%;
     transition-duration: 0.5s;
     transition-property: opacity;
+}
+
+.navbar-nav li:last-of-type>a{
+    border: white solid 2px;
+    border-radius: 5px;
+    font-weight: normal;
+}
+
+.navbar-nav li:last-of-type>a:hover{
+    background-color: white;
+    color: rgb(37, 37, 37) !important;
+    opacity: 100%;
+    transition-duration: 0.5s, 0.5s;
+    transition-property: background-color, color;
 }
 
 nav i{
@@ -64,6 +81,8 @@ footer>section a:hover{
 
 footer>div{
     background-color: rgb(20, 20, 20);
+    font-weight: bold;
+    font-size: 15px;
 }
 
 /*************** ACCUEIL ******************/
