--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -17,6 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('contact') }}">Contact</a>
                 </li>
+                <li>
+                    <a class="btn" href="{{ path('inscription') }}">S'inscrire</a>
+                </li>
             </ul>
         </div>
     </div>
