--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -22,7 +22,7 @@
                 label: 'Mot de passe'
             }) }}
             {{ form_row(registrationForm.agreeTerms) }}
-
+            <p>Déjà inscrit ? <a href="{{ path('login') }}">Connectez-vous !</a></p>
             <button type="submit" class="btn btn-primary">S'inscrire</button>
         {{ form_end(registrationForm) }}
     </div>
