--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -19,7 +19,7 @@
                 </li>
                 {% if app.user %}
                     <li>
-                        <a class="btn" href="{{ path('app_login') }}"><i class="fas fa-user"></i>  Votre compte</a>
+                        <a class="btn" href="{{ path('modification', { id:app.user.id }) }}"><i class="fas fa-user"></i>  Votre compte</a>
                     </li>
                     <li>
                         <a class="btn" href="{{ path('app_logout') }}">Déconnexion</a>
