--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des articles{% endblock %}
+{% block title %}Blog{% endblock %}
 
 {% block body %}
     {% include "nav.html.twig" %}
