--- a/public/css/style.css
+++ b/public/css/style.css
@@ -171,3 +171,9 @@ legend{
     font-size: 18px !important;
 }
 
+/*************** LISTE DES FORMATIONS *****************/
+
+.listeFormation img{
+    width: 50px;
+    height: 50px;
+}
