--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -5,10 +5,12 @@
 {% block body %}
     {% include "nav.html.twig" %}
 
+<ul class="list-group">
     {% for formation in formations %}
-        <img src="{{ asset('/formationsImg/')}}{{ formation.icon }}"  alt="">
-        {{ formation.formationName }}
-        {{ formation.price }}€
+        <li class="list-group-item d-flex justify-content-between align-items-center listeFormation">
+            <img src="{{ asset('/formationsImg/')}}{{ formation.icon }}"  alt="">{{ formation.formationName }}
+            <span class="badge bg-primary rounded-pill">{{ formation.price }}€</span>
+        </li>
     {% endfor %}
 
     {% include "footer.html.twig" %}
