--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -6,11 +6,14 @@
     {% include "nav.html.twig" %}
 
     {% for article in articles %}
-        {{ article.title }}
-        {{ article.autor }}
-        {{ article.creationDate|date('d-m-Y') }}
-        {{ article.modificationDate|date('d-m-Y') }}
-        <img src="{{ asset('/articlesImg/')}}{{ article.image }}"  alt="">
+        <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="{{ asset('/articlesImg/')}}{{ article.image }}" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">{{ article.title }}</h5>
+            <p class="card-text">{{ article.content }}</p>
+            <a href="#" class="btn btn-primary">Lire l'article</a>
+        </div>
+        </div>
     {% endfor %}
 
     {% include "footer.html.twig" %}
