--- a/templates/admin/listeArticle.html.twig
+++ b/templates/admin/listeArticle.html.twig
@@ -37,7 +37,7 @@
     {% endfor %}
   </tbody>
 </table>
-<a href="" class="btn btn-primary">Ajouter un article</a>
+<a href="{{ path('ajoutArticle') }}" class="btn btn-primary">Ajouter un article</a>
 
     {% include "footer.html.twig" %}
 {% endblock %}
