--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom">
+<footer>
 
     <section>
         <a class="btn" href="https://www.facebook.com/marc.chanteranne.9" target="_blank" role="button">
