--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,8 +30,8 @@
                value="{{ csrf_token('authenticate') }}"
         >
     
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
+        <button class="btn btn-lg btn-primary mt-3" type="submit">
+            Se connecter
         </button>
     </div>
 </form>
