--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,3 +177,14 @@ legend{
     width: 50px;
     height: 50px;
 }
+
+/*************** LISTE DES ARTICLES *****************/
+
+.card-img-top{
+    width: 50px;
+    height: 50px;
+}
+
+.card{
+    margin-bottom: 20px;
+}
