--- a/templates/admin/listeFormation.html.twig
+++ b/templates/admin/listeFormation.html.twig
@@ -31,7 +31,7 @@
     {% endfor %}
   </tbody>
 </table>
-<a href="" class="btn btn-primary">Ajouter une formation</a>
+<a href="{{ path('ajoutFormation') }}" class="btn btn-primary">Ajouter une formation</a>
 
     {% include "footer.html.twig" %}
 {% endblock %}
