--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -5,14 +5,22 @@
 {% block body %}
     {% include "nav.html.twig" %}
 
+    <h1>Espace blog</h1>
+
     {% for article in articles %}
-        <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="{{ asset('/articlesImg/')}}{{ article.image }}" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">{{ article.title }}</h5>
-            <p class="card-text">{{ article.content }}</p>
-            <a href="#" class="btn btn-primary">Lire l'article</a>
-        </div>
+        <div class="card text-center">
+            <div class="card-header">
+                Écrit par {{ article.autor }}
+            </div>
+            <div class="card-body">
+                <img class="card-img-top" src="{{ asset('/articlesImg/')}}{{ article.image }}" alt="Card image cap">
+                <h5 class="card-title">{{ article.title }}</h5>
+                <p class="card-text">{{ article.content }}</p>
+                <a href="#" class="btn btn-primary">Lire</a>
+            </div>
+            <div class="card-footer text-muted">
+                Ajouté le {{ article.creationDate|date('d-m-Y') }}
+            </div>
         </div>
     {% endfor %}
 
